--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,23 @@ code {
   margin: 0 auto;
   width: 900px;
 }
+
+.pagination {
+  list-style: none;
+  margin: 0;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.pagination li {
+  border: 1px solid black;
+  border-radius: 4px;
+  margin: 5px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.pagination li.active {
+  background-color: #ccc
+}
