--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,29 @@ code {
 .pagination li.active {
   background-color: #ccc
 }
+
+.table {
+  width: 100%
+}
+
+td {
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+th {
+  cursor: pointer
+}
+
+.input-group {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 15px 0;
+  padding: 15px 0;
+}
+
+.form-control {
+  width: 100%
+}
